# ImCompare

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp  main.cpp
src/: Application.cpp  Application.h  Base.h  CompareManager.cpp  CompareManager.h  Core.h  Explorer.cpp  Explorer.h  FileDialog.cpp  FileManager.cpp  FileManager.h  FileSystem.h  FolderManager.cpp  ImageLoader.cpp  ImageLoader.h  Log.cpp  Log.h  Menu.cpp  Viewer.cpp  Viewer.h  main.cpp
src/Core/: Application.cpp  Application.h  Core.h  Log.cpp  Log.h  Menu.cpp  Menu.h  Settings.cpp  Settings.h
src/Filesystem/: DirectoryNode.h  FileDialog.cpp  FileDialog.h  FileManager.cpp  FileSystem.h  FolderHistory.h  FolderManager.cpp  FolderManager.h
src/Renderer/: ImageLoader.cpp  ImageLoader.h  Viewer.cpp  Viewer.h
src/Utility/: GuiHelpers.h
src/old/: CompareManager.cpp  CompareManager.h
test/: CMakeLists.txt  test.cpp  test_old.cpp
